2005-02-27  Tom Tromey  <tromey@redhat.com>

	* header/cni.cc (write_includes): Changed argument types.
	(generate): Use get_sorted_methods.
	* header/cni.hh (cni_code_generator::method_iterator): New
	typedef.
	(cni_code_generator::write_includes): Changed argument types.
	* aot/aotclass.cc (lay_out_vtable): Use get_sorted_methods.  Skip
	final methods from Object.
	(add_item): Don't use slot 0 of constant pool.
	* model/class.cc (resolve_one_method): Updated
	source_order_methods.
	(add_method): Likewise.
	(inherit_methods): Likewise.
	(resolve_members): Likewise.
	* model/class.hh (model_class::source_order_methods): New field.
	(model_class::get_sorted_methods): New method.

2005-02-26  Tom Tromey  <tromey@redhat.com>

	* aot/aotclass.cc (lay_out_vtable): Added debug code.

2005-02-23  Tom Tromey  <tromey@redhat.com>

	* aot/mangle.cc (emit_saved): Fixed test for '0'.

2005-02-21  Tom Tromey  <tromey@redhat.com>

	* aot/aotclass.cc (add_class): New method.
	* aot/aotclass.hh (aot_class::add_class): Declare.

	* aot/mangle.cc (mangler): New constructor.
	* aot/mangle.hh (mangler): Declare.

	* aot/aotclass.hh (aot_class::pool_entry): Now public.
	(aot_class::type_assertion_entry): Likewise.
	(aot_class::get_constant_pool): New method.

2005-02-21  Tom Tromey  <tromey@redhat.com>

	* bytecode/block.cc (optimize): Optimize goto-to-goto.

2005-02-19  Tom Tromey  <tromey@redhat.com>

	* compiler.cc (find_class): Removed assertion.

	* visitor.hh (~visitor): New virtual destructor.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* aot/mangle.cc (mangler): New constructor.
	* aot/mangle.hh (mangler): Declare.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* model/method.cc (model_method): Updated.
	* source/parse.cc (any_method_declarator): Call set_method_end.
	* model/method.hh (model_method::method_end): New field.
	(model_method::set_method_end): New method.
	(model_method::get_method_end): Likewise.
	(model_method): Updated.
