@@ -1,7 +1,3 @@
-model_class apparently sorts methods by name
-this is wrong for vtable generation
-
-
 see verifier fix of 2005-02-18 on trunk
 should go in our verifier too
 
@@ -293,6 +289,11 @@ X implement the write-to-temp file thing that bytecode uses?
 
 Tree generation
 
+we should use explicit temporaries instead of save_expr
+
+DECL_EXTERNAL stuff needs some work
+sometimes it should be, sometimes not
+
 the verifier needs a mode to be more lazy
 but not always...
 in this situation should put a type assertion in the class
@@ -303,9 +304,6 @@ we can reuse the bulk of this code with LLVM
 
 build_address_of() the functions we call
 document this in tree.def:call_expr ?
-
-!! must terminate arguments with void_list_node
-init. void_list_node ?
 
 we must generate an array store check for something like:
   Object[] x;  x[0] = something;
@@ -343,11 +341,11 @@ one wrapper or another
 must share code between both code generation engines.
 eg, only implement the ABI differences once
 
-we can remove the bit field langhook once gcjx is checked in
-
 we could have a separate atable slot for each class referenced
 by `new' that we would use to store the appropriate allocator.
-this would let us continue to avoid finalizer and other penalties
+this would let us continue to avoid finalizer and other penalties.
+Equivalently we could give each class its own allocator method
+that we could call
 
 what is TYPE_VFIELD ?
 and add the abort() to tree.c:find_compatible_field()
@@ -357,6 +355,11 @@ comes from libgcj.  In other cases, it doesn't matter, and we should
 let it slide.  Also, when generating old ABI code, we should ensure
 that old-ABI-ness holds for all other classes where it matters (eg our
 hierarchy, maybe classes we call too?)
+
+search gcc for references to 'java'
+sometimes it claims that gcj does bad things
+we can fix these or remove the comments
+not all of these things are well-explained
 
 very random thought: we could have a tree-generating back end that
 generates trees the way that g++ likes.  then you could directly
